--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>be.fedict</groupId>
 	<artifactId>jtrust</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>1.2.0.FEDICT-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>FedICT Java Trust Library</name>
 	<description>Pragmatic PKI validation library</description>
